--- a/Facebook_MKT.WPF/Controls/FolderControls/CbbAccountFolder.xaml
+++ b/Facebook_MKT.WPF/Controls/FolderControls/CbbAccountFolder.xaml
@@ -7,20 +7,32 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="30" d:DesignWidth="200" AllowDrop="True">
-    <ComboBox 
-       Padding="10"
-        x:Name="CbbFolder"
-        Width="200"
-        FontSize="14"
-        materialDesign:HintAssist.Hint="Chọn thư mục"
-        
-        Style="{StaticResource MaterialDesignOutlinedComboBox}"
-        ItemsSource="{Binding Items}"
-        SelectedItem="{Binding SelectedItem}">
-        <ComboBox.ItemTemplate >
-            <DataTemplate >
-                <TextBlock  Text="{Binding FolderName}" />
-            </DataTemplate>
-        </ComboBox.ItemTemplate>
-    </ComboBox>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <ComboBox 
+          Grid.Row="0"
+ Padding="10"
+  x:Name="CbbFolder"
+  Width="200"
+  FontSize="14"
+  materialDesign:HintAssist.Hint="Chọn thư mục"
+  
+  Style="{StaticResource MaterialDesignOutlinedComboBox}"
+  ItemsSource="{Binding Items}"
+  SelectedItem="{Binding SelectedItem}">
+            <ComboBox.ItemTemplate >
+                <DataTemplate >
+                    <TextBlock  Text="{Binding FolderName}" />
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0,10,0,0">
+            <Button Content="Thêm"></Button>
+            <Button Content="Xóa"></Button>
+        </StackPanel>
+
+    </Grid>
 </UserControl>
