--- a/Facebook_MKT.WPF/Views/Pages/PageView.xaml
+++ b/Facebook_MKT.WPF/Views/Pages/PageView.xaml
@@ -8,6 +8,7 @@
              xmlns:datagridAccount="clr-namespace:Facebook_MKT.WPF.Controls.DataGrid.Account"
              xmlns:accType="clr-namespace:Facebook_MKT.WPF.ViewModels.Pages"
              xmlns:local="clr-namespace:Facebook_MKT.WPF.Views.Pages"
+              xmlns:dragDrop="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="{StaticResource backgroundColor}">
@@ -21,7 +22,8 @@
                         <Grid.RowDefinitions>
                             <RowDefinition Height="100"></RowDefinition>
                             <RowDefinition Height="*"></RowDefinition>
-                            <RowDefinition Height="*"></RowDefinition>
+                        <!--<RowDefinition Height="40"></RowDefinition>-->
+                        <RowDefinition Height="*"></RowDefinition>
                         </Grid.RowDefinitions>
                         <StackPanel x:Name="Header" Grid.Row="0" 
                                     VerticalAlignment="Center" Orientation="Horizontal" 
@@ -50,16 +52,17 @@
                                IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
                                Style="{StaticResource StopButtonStyle}">
                         </Button>
-                        <Label Content="Số Luồng:"></Label>
+                        <Label Content="Thread:"></Label>
                         <materialDesign:NumericUpDown
                                         ToolTip="Số Luồng"
-                                        Background="Wheat"
+                                        Background="WhiteSmoke"
                                         Foreground="Black"
                                          Value="{Binding MaxParallelTasks, Mode=TwoWay}"
                                                 Minimum="1"
-                                                Maximum="100"            />
+                                                Maximum="100"/>
                     </StackPanel>
-
+                    <!--<Rectangle  Grid.Row="2" ></Rectangle>-->
+                        
                         <StackPanel x:Name="MainContent" Grid.Row="1" Background="{StaticResource backgroundColor}">
 
                         <Expander 
@@ -107,14 +110,15 @@
                             </Expander.HeaderTemplate>
                             <Expander.Content>
                                 <StackPanel>
-                                    <datagridAccount:DataGridAccount Height="auto"
+                                    <datagridAccount:DataGridAccount MaxHeight="280"
                                          DataContext="{Binding DataGridAccountViewModel}" />
+                                   
                                 </StackPanel>
                             </Expander.Content>
                         </Expander>
                     </StackPanel>
 
-                    <StackPanel x:Name="Footer" Grid.Row="2" >
+                    <StackPanel x:Name="Footer" Grid.Row="3" >
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center"  Margin="20,0,0,0">
                             <materialDesign:PackIcon Kind="EarthArrowDown" Style="{StaticResource CustomPackIconStyle}"/>
                            
@@ -130,15 +134,91 @@
                         
                     </Grid>
                 </TabItem>
-                
-                <TabItem
+
+            <TabItem
                     Background="{StaticResource backgroundColor}"
       Header="Cấu hình">
-                    <TextBlock
-        Margin="8"
-        Text="Cấu hình chạy page" />
-               
-                </TabItem>
+                <StackPanel Margin="20,20,20,0" >
+                    <TextBlock Text="Script:" FontSize="18" FontWeight="Bold" />
+
+                    <GroupBox Header="Task List" Margin="0,10,0,40" Background="Transparent">
+                        <ListBox ItemsSource="{Binding TaskList}" 
+      SelectionMode="Single"
+      dragDrop:DragDrop.IsDropTarget="True"
+      dragDrop:DragDrop.IsDragSource="True"
+      AllowDrop="True"
+      Height="200"
+      dragDrop:DragDrop.DropHandler="{Binding TaskDropHandler}">
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal" >
+                                        <TextBlock Text="{Binding Index, StringFormat='{}{0}.',Mode=TwoWay}" 
+     Margin="0,0,10,0" FontSize="17"/>
+                                        <TextBlock Text="{Binding TaskName}" FontSize="17" Margin="0,0,20,0" />
+                                        <ItemsControl ItemsSource="{Binding Fields}" 
+  ItemTemplateSelector="{StaticResource TaskFieldTemplateSelector}">
+                                            <ItemsControl.ItemsPanel>
+                                                <ItemsPanelTemplate>
+                                                    <StackPanel Orientation="Horizontal"
+                      Margin="0,0,0,0"/>
+                                                </ItemsPanelTemplate>
+                                            </ItemsControl.ItemsPanel>
+                                        </ItemsControl>
+                                        <Border Width="50" Height="40"
+Background="Transparent"
+CornerRadius="50"
+ BorderThickness="1"
+ BorderBrush="White"
+HorizontalAlignment="Center"
+VerticalAlignment="Center">
+                                            <Button Command="{Binding DataContext.RemoveTaskCommand, 
+ RelativeSource={RelativeSource AncestorType={x:Type ListBox}}}" 
+     CommandParameter="{Binding}" 
+Background="Transparent"
+BorderThickness="0">
+                                                <materialDesign:PackIcon 
+ Height="30"
+     Width="30"
+     ToolTip="Xóa"
+ Kind="Delete" 
+ Style="{StaticResource CustomPackIconStyle}"
+ Foreground="White"
+ HorizontalAlignment="Center"
+ VerticalAlignment="Center"/>
+                                            </Button>
+                                        </Border>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                        </ListBox>
+                    </GroupBox>
+
+
+                    <WrapPanel>
+                        <GroupBox Header="Account Tasks" Margin="0,0,20,20" Background="Transparent">
+                            <ListBox 
+                                  Background="Transparent"
+                                  SelectionMode="Single"
+                                  dragDrop:DragDrop.IsDragSource="True"
+                                  dragDrop:DragDrop.IsDropTarget="True"
+                                  MinHeight="200"
+                                  AllowDrop="False">
+                                
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="{Binding Index, StringFormat='{}{0}.'}" 
+                                                Margin="0,0,10,0" FontSize="17"/>
+                                            <TextBlock Text="Comment" FontSize="17" Margin="0,0,20,0" />
+                                            <Label Content="Từ"></Label>
+                                            <TextBox Text=""></TextBox>
+                                            <Label Content="Đến"></Label>
+                                            <TextBox Text=""></TextBox>
+                                        </StackPanel>
+                                    
+                            </ListBox>
+                        </GroupBox>
+                    </WrapPanel>
+                </StackPanel>
+            </TabItem>
             </TabControl>
        
     
